# sentinel

./: Cargo.toml
sentinel_cli/: Cargo.toml  manifest.toml
sentinel_cli/src/: main.rs  workspace.rs
sentinel_core/: Cargo.toml
sentinel_core/src/: lib.rs
sentinel_core/src/dag/: manifest.rs  plan.rs
sentinel_core/src/engine/: mod.rs  runtime.rs  udf.rs
sentinel_core/src/plan/: manifest.rs  mod.rs  planner.rs  tests.rs
sentinel_core/src/source_connectors/: mod.rs  path_source.rs  source_connector.rs
sentinel_macro/: Cargo.toml
sentinel_macro/src/: lib.rs
sentinel_macro/test/: test_sentinel_udf.rs
src/: main.rs
workspace/: manifest.toml
workspace/udfs/: Cargo.toml
workspace/udfs/src/: lib.rs
